testes unitarios em funcionamento